samples/_failures_safe/1761190329_96ce49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3162b658.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3162b658.c:159:22: error: expected ‘;’ at end of input
  159 |                 token
      |                      ^
      |                      ;
./samples/SAFE/__tmp_3162b658.c:159:17: error: expected declaration or statement at end of input
  159 |                 token
      |                 ^~~~~
./samples/SAFE/__tmp_3162b658.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3162b658.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3162b658.c:159:17: error: expected declaration or statement at end of input
